--- a/fastapi_template/requirements.txt
+++ b/fastapi_template/requirements.txt
@@ -15,10 +15,11 @@ requests==2.31.0
 openai==1.3.7
 anthropic==0.7.8
 google-generativeai==0.3.2
+google-cloud-aiplatform
 transformers==4.36.2
-torch==2.1.1
-pandas==2.1.4
-numpy==1.24.4
+torch==2.2.0
+pandas==2.2.0
+numpy==1.26.0
 cryptography==42.0.8
 python-dotenv==1.0.0
 loguru==0.7.2
